# RigIt

./: .gitignore  .npmrc  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/video/: package.json  tsconfig.json
apps/web/: next.config.js  package.json  tailwind.config.js
programs/rig-it/: Cargo.toml
programs/rig-it/src/: errors.rs  events.rs  lib.rs
programs/rig-it/src/instructions/: allocate_buyback.rs  carry_forward.rs  claim_winnings.rs  commit_randomness.rs  deposit_to_rig.rs  emergency_pause.rs  init_block.rs  init_protocol.rs  mod.rs  refund_loser.rs  reveal_randomness.rs  set_params.rs  start_exploration.rs
programs/rig-it/src/state/: block.rs  deposit.rs  exploration.rs  mod.rs  protocol.rs  rig.rs
programs/rig-it/src/utils/: mod.rs  randomness.rs  tickets.rs
rigit UI/: package.json
rigit UI/app/: layout.tsx  page.tsx
rigit UI/components/: block-details.tsx  claim-buttons.tsx  disconnect-button.module.css  disconnect-button.tsx  exploration-history-section.tsx  exploration-history.tsx  footer-section.tsx  hero-section.tsx  how-it-works.tsx  rig-exploration-section.tsx  treasury-panel.tsx  user-stats.tsx
rigit-ui/: next.config.mjs  package-lock.json
rigit-ui/app/: globals.css
rigit-ui/components/: all-blocks-section.tsx  block-card.tsx  block-rotation.tsx  block-selector.tsx  countdown-timer.tsx  economics-panel.tsx  featured-block.tsx  floating-blocks.tsx  header.tsx  pixel-logo.tsx  pump-logo.tsx  rig-grid.tsx  (+3 more)
scripts/: init-local.ts  simulate-exploration.ts
tests/: fixtures.ts  rig-it.ts  utils.ts
(+36 files in other folders)
